--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "jest": "^23.6.0",
     "react-loader": "^2.4.5"
   }
 }
