--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/src/components/spare_components
-./async.js
+/src/components/spare_components/
+/async.js
 
 # dependencies
 /node_modules
